# Spire

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
Spire/: CMakeLists.txt
Spire/CMake/Utils/: Assets.cmake  Tests.cmake
Spire/Game/: CMakeLists.txt
Spire/Game/Source/: GameApplication.cpp  GameApplication.h  GameCamera.cpp  GameCamera.h  Main.cpp  MinecraftTypes.h  Profiling.cpp  Profiling.h
Spire/Game/Source/Rendering/: ObjectRenderer.cpp  ObjectRenderer.h  RenderInfo.h
Spire/Libs/: build.py
Spire/Libs/imgui/: CMakeLists.txt
Spire/Libs/stb/: CMakeLists.txt
Spire/Spire/: CMakeLists.txt
Spire/Spire/Source/: EngineIncludes.h  pch.h
Spire/Spire/Source/Core/: Application.h  Engine.cpp  Engine.h
Spire/Spire/Source/Engine/: EngineIncludes.h
Spire/Spire/Source/Engine/Core/: Application.cpp  Engine.cpp  Engine.h
Spire/Spire/Source/Engine/Rendering/: RenderingManager.cpp  RenderingManager.h
Spire/Spire/Source/Engine/Resources/: ImageLoader.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h
Spire/Spire/Source/Engine/Utils/: FileIO.cpp  Log.h  Version.cpp  Version.h
Spire/Spire/Source/Engine/Window/: Window.cpp
Spire/Spire/Source/Game/: GameApplication.cpp  GameApplication.h  ObjectRenderer.cpp  RenderInfo.h
Spire/Spire/Source/Rendering/: RenderingManager.cpp  RenderingManager.h
Spire/Spire/Source/Rendering/Core/: LogicalDevice.cpp  LogicalDevice.h  RenderingCommandManager.cpp  RenderingCommandManager.h  RenderingDeviceManager.cpp  RenderingDeviceManager.h  RenderingSync.cpp  RenderingSync.h  ShaderCompiler.cpp  ShaderCompiler.h  Swapchain.cpp  Swapchain.h  VulkanDebugCallback.cpp  VulkanDebugCallback.h  VulkanQueue.cpp  VulkanQueue.h  (+2 more)
Spire/Spire/Source/Resources/: ImageLoader.cpp  ImageLoader.h  Mesh.h  Model.h  ModelLoader.cpp  ModelLoader.h
Spire/Spire/Source/Utils/: CommandBufferVector.cpp  CommandBufferVector.h  FileIO.cpp  FileIO.h  FrameDeleter.h  Hashing.h  Log.h  MacroDisableCopy.h  MathsUtils.h  Random.cpp  Random.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  Version.cpp  Version.h
Spire/Spire/Source/Window/: Window.cpp  Window.h
Spire/Spire/Tests/: CMakeLists.txt
Spire/Spire/Tests/Tests/: MathsDistanceSquareTests.cpp  MathsRemapTests.cpp  Test.cpp
Spire/SpireVoxel/: CMakeLists.txt
Spire/SpireVoxel/Assets/: Cube.mtl
Spire/SpireVoxel/Assets/Shaders/: FaceSize.h  Greedy.h  GreedyMeshing.comp  PushConstants.glsl  PushConstants.h  ShaderInfo.h  VoxelDataHashMap.h  compute.comp  main.frag  main.geom  main.vert  test.frag  test.vert
Spire/SpireVoxel/Source/: SpireVoxelRenderer.h  VoxelRenderer.cpp  VoxelRenderer.h
Spire/SpireVoxel/Source/Chunk/: AOLookupTable.h  BufferAllocator.cpp  Chunk.cpp  Chunk.h  ChunkDrawParams.h  DetailLevel.cpp  DetailLevel.h  GreedyMeshingBitmask.cpp  GreedyMeshingBitmask.h  GreedyMeshingGrid.cpp  GreedyMeshingGrid.h  VoxelPositionToTypeHashMap.cpp  VoxelPositionToTypeHashMap.h  VoxelType.h  VoxelWorld.cpp  VoxelWorld.h
Spire/SpireVoxel/Source/ChunkOrderControllers/: EmptyChunkOrderController.h  IChunkOrderController.cpp  IChunkOrderController.h
Spire/SpireVoxel/Source/Edits/: BasicVoxelEdit.cpp  BasicVoxelEdit.h  CuboidVoxelEdit.cpp  CuboidVoxelEdit.h  IVoxelEdit.h  MergedVoxelEdit.cpp  MergedVoxelEdit.h
Spire/SpireVoxel/Source/Generation/: ProceduralGenerationManager.cpp  ProceduralGenerationManager.h
Spire/SpireVoxel/Source/LOD/: DetailLevel.cpp  DetailLevel.h  ISamplingOffsets.h  LODManager.cpp  LODManager.h  SamplingOffsets.cpp  SamplingOffsets.h
Spire/SpireVoxel/Source/Rendering/: BufferAllocator.cpp  BufferAllocator.h  GameCamera.cpp  GameCamera.h  ObjectRenderer.cpp  ObjectRenderer.h  RenderInfo.h  VoxelWorldRenderer.cpp  VoxelWorldRenderer.h
Spire/SpireVoxel/Source/Serialisation/: SerializedGenerationProvider.cpp  SerializedGenerationProvider.h  VoxelSerializer.cpp  VoxelSerializer.h
Spire/SpireVoxel/Source/Types/: RegisteredVoxelType.h  VoxelImageManager.cpp  VoxelImageManager.h  VoxelType.h  VoxelTypeInfo.h  VoxelTypeRegistry.cpp  VoxelTypeRegistry.h
Spire/SpireVoxel/Source/Utils/: ClosestUtil.h  IVoxelCamera.h  RaycastUtils.cpp  RaycastUtils.h
Spire/SpireVoxel/Tests/: CMakeLists.txt
Spire/SpireVoxel/Tests/Tests/: AmbientOcclusionTests.cpp  GreedyMeshingTests.cpp  Test.cpp  TestFaceUtils.cpp  TestHelpers.h  TestVoxelEdits.cpp  VertexPackingTests.cpp  VoxelPositionToTypeHashMapTests.cpp  VoxelTypePackingTests.cpp  VoxelWorldTests.cpp
Tooling/MinecraftRegionConverter/MinecraftRegionConverter/: CMakeLists.txt  enkimi.cpp  enkimi.h  main.cpp  minecraft.cpp  minecraft.h  miniz.cpp  miniz.h  utils.h
VulkanTutorial/: CMakeLists.txt
VulkanTutorial/Assets/: test.frag  test.vert
VulkanTutorial/Assets/Shaders/: PushConstants.glsl  ShaderBindings.h  ShaderInfo.h  test.frag  test.vert
VulkanTutorial/Source/: Main.cpp
VulkanTutorial/Source/Engine/: EngineIncludes.h
VulkanTutorial/Source/Engine/Core/: Application.cpp  Application.h  Engine.cpp  Engine.h
VulkanTutorial/Source/Engine/Rendering/: BufferManager.cpp  BufferManager.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Model.cpp  Model.h  PipelineDescriptorSetsManager.cpp  PipelineDescriptorSetsManager.h  PushConstants.h  Renderer.cpp  Renderer.h  RenderingCommandManager.cpp  RenderingDeviceManager.cpp  RenderingDeviceManager.h  RenderingManager.cpp  RenderingManager.h  RenderingSync.cpp  RenderingSync.h  SceneModels.cpp  SceneModels.h  SceneTextures.cpp  ShaderCompiler.cpp  ShaderCompiler.h  Swapchain.cpp  Swapchain.h  TextureManager.cpp  TextureManager.h  VulkanAllocator.cpp  VulkanAllocator.h  VulkanBuffer.h  VulkanQueue.cpp  VulkanQueue.h
VulkanTutorial/Source/Engine/Resources/: ImageLoader.cpp  ImageLoader.h  Mesh.h  Model.h  ModelLoader.cpp  ModelLoader.h
VulkanTutorial/Source/Engine/Utils/: FileIO.cpp  FileIO.h  MacroDisableCopy.h  Timer.cpp  Timer.h
VulkanTutorial/Source/Engine/Window/: Window.cpp  Window.h
VulkanTutorial/Source/Game/: GameApplication.cpp  GameApplication.h  GameCamera.cpp  GameCamera.h  ObjectRenderer.cpp  ObjectRenderer.h
(+261 files in other folders)
